crates/solidity/testing/snapshots/bindings_output/yul/try_params/generated/0.4.21-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or ThrowKeyword or TrueKeyword or UfixedKeyword or UintKeyword or VarKeyword or WhileKeyword.
   ╭─[input.sol:3:9]
   │
 3 │ ╭─▶         try this.test() returns (uint v) {
   ┆ ┆   
 9 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public returns (uint) {
   │              ──┬─  
   │                ╰─── name: 2
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─│ ▶ contract Test {
  2 │ │ ╭─▶     function test() public returns (uint) {
    ┆ ┆ ┆   
  9 │ │ ├─▶     }
    │ │ │           
    │ │ ╰─────────── definiens: 2
 10 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 1
────╯
